# skalar_accounting_model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
apps/cli/: pyproject.toml
apps/cli/fixtures/: sk011.json
apps/cli/src/skalar_cli/: __init__.py  pipeline.py  profile_cmd.py  run_cmd.py
apps/cli/tests/: test_pipeline.py  test_profile_cmd.py  test_run_cmd.py
docs/: Accounting Model.xlsx  access.md  architecture.md  how-to-run.md  index.md  parameters.md
docs/capital_mechanics_documentation/: scenarios_sandbox.md  skalar_cash_events_vintages.tex  skalar_cash_model_kb.md
docs/datasets/skalar/: index.md
docs/datasets/skalar/tables/: company.md  investment_ledger.md  monthly_payments.md  origination_collection_percent.md  payment_ledger.md  payments.md  spend.md
notebooks/: collections_waterfall.ipynb
prompts/: 00_foundation_and_architecture.md  README.md  phase_0_monorepo_and_bq_access.md  phase_1_domain_models_and_parameters.md  phase_2_cohorts_and_collections.md  phase_3_income_caps_thresholds_compliance.md  phase_4_cash_events_and_netting.md  phase_5_eir_accounting_and_excel.md  phase_6_cli_orchestration_and_docs.md
