[project]
name = "skalar-cli"
version = "0.1.0"
description = "Skalar pipeline orchestration CLI (wires data_access -> capital_mechanics -> accounting)."
requires-python = ">=3.13"
dependencies = [
    "skalar-data-access",
    "skalar-capital-mechanics",
    "skalar-accounting",
    "skalar-data-docs",
    "typer>=0.12",
]

[project.scripts]
skalar-profile = "skalar_cli.profile_cmd:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skalar_cli"]
